tests/compiler/errors/07-missing-return.jsa
// jastat-summary: Error on missing return statement in non-void function
// jastat: mode=compiler, capture=stderr

function get_value(): i32 {
    let x: i32 = 42;
    // Missing return statement
}

let val = get_value();
